// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "ensureNonZero",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "ensureNonZero",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "ensureNonZero",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "float",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "ensureNonZero",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local f32)
    i32.const 4
    i32.const 0
    f32.load
    local.set 0
    local.get 0
    f32.const 0x0p+0 (;=0;)
    f32.eq
    if  ;; label = @1
      f32.const 0x1p+0 (;=1;)
      local.set 0
    end
    local.get 0
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`ensureNonZero (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input",
    "isInteger": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "float",
  },
  "output": {
    "allocationUnitAddress": 1,
    "allocationUnitCount": 1,
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "float",
  },
}
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "ensureNonZero",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "ensureNonZero",
        },
      ],
      "instruction": "module",
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "output",
          "type": "identifier",
          "value": "&output",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "instruction": "push",
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [],
      "instruction": "ensureNonZero",
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "store",
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "input",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "output",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "ensureNonZero",
      },
    ],
    "instruction": "module",
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "type": "module",
}
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 4
    i32.const 0
    i32.load
    local.set 0
    local.get 0
    i32.eqz
    if (result i32)  ;; label = @1
      i32.const 1
    else
      local.get 0
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`ensureNonZero (int) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "allocationUnitAddress": 0,
    "allocationUnitCount": 1,
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "input",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
  "output": {
    "allocationUnitAddress": 1,
    "allocationUnitCount": 1,
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "output",
    "isInteger": true,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "pointerDepth": 0,
    "type": "int",
  },
}
`;
